@@ -7,6 +7,7 @@ PHP                                                                        NEWS
   segfault). (Dmitry)
 - Fixed bug #42937 (__call() method not invoked when methods are called on
   parent from child class). (Dmitry)
+- Fixed bug #42736 (xmlrpc_server_call_method() crashes). (Tony)
 
 08 Nov 2007, PHP 5.2.5
 - Upgraded PCRE to version 7.3 (Nuno)
